# plantFeeder

./: .gitmodules  CMakeLists.txt  README.md  links.txt  main.cpp  main.py  picoESP8266.py  picoW_main.py  test.py  token.txt.save.1  uartCom.py  utils.py  wateringPlant.html  website.html
html_pages/: ap.html  website.html
lib/: CMakeLists.txt  esp8266.cpp  esp8266.h
pico W/: ap_server.py  main.py  plant_server.py  utils.py
picoWIFI/: picoWIFI.blend  picoWIFI.blend1
picoWIFI/picoESP12F/: picoESP12F-B_Cu.gbr  picoESP12F-B_Mask.gbr  picoESP12F-B_Paste.gbr  picoESP12F-B_Silkscreen.gbr  picoESP12F-Edge_Cuts.gbr  picoESP12F-F_Cu.gbr  picoESP12F-F_Mask.gbr  picoESP12F-F_Paste.gbr  picoESP12F-F_Silkscreen.gbr  picoESP12F-job.gbrjob  picoESP12F-top-pos.csv  picoESP12F.cad  picoESP12F.csv  picoESP12F.drl  picoESP12F.kicad_pcb  picoESP12F.kicad_prl  picoESP12F.kicad_pro  picoESP12F.kicad_sch  picoESP12F.step  picoESP12F.xml
picoWIFI/picoESP12F/gerbers/: picoESP12F-B_Cu.gbr  picoESP12F-B_Mask.gbr  picoESP12F-B_Paste.gbr  picoESP12F-B_Silkscreen.gbr  picoESP12F-Edge_Cuts.gbr  picoESP12F-F_Cu.gbr  picoESP12F-F_Mask.gbr  picoESP12F-F_Paste.gbr  picoESP12F-F_Silkscreen.gbr  picoESP12F-job.gbrjob  picoESP12F.drl
waterpump/: case_cover.stl  impeller_case.stl  impeller_s4.stl  shaft_2_mm.stl
